--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@
 
 $soft-blue: hsl(215, 51%, 70%);
 $cyan: hsl(178, 100%, 50%);
+$cyan-op: hsla(178, 100%, 50%, 50%);
 
 //### Neutral
 
@@ -16,3 +17,5 @@ $font-size: 18px;
 
 $mobile-bp: 374.98px;
 $desktop-bp: 1439.98px;
+
+//13px 30px
